# PXD-Shader

./: CMakeLists.txt  README.md  main.cpp  shader_config.py
shaders/: common.glsl  model.frag  model.vert  model.vert.json
sources/: common.cpp  common.h  shader_config.py
